# FileFinder

./: README.md  app.json  index.ts  package-lock.json  package.json  tsconfig.json
cpp/: CMakeLists.txt
cpp/bridge/: FileSearchModule.cpp  FileSearchModule.h
cpp/fileindexer/: FileIndexer.cpp  FileIndexer.h
src/: App.tsx
src/components/: FileItem.tsx  FileList.tsx  FilterModal.tsx  SearchBar.tsx  SortButton.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useFileSearch.ts
src/native/: FileSearchEngine.ts
src/screens/: HomeScreen.tsx  SettingsScreen.tsx
src/utils/: fileHelpers.ts  formatters.ts
